--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-drawline",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "You can draw lines between your react components and connect them. This visual line can be either linear or in the shape of L.",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -33,28 +33,35 @@
   },
   "homepage": "https://github.com/burakkgunduzz/react-drawline#readme",
   "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/plugin-transform-react-display-name": "^7.16.7",
-    "@babel/plugin-transform-react-jsx-development": "^7.16.7",
-    "@babel/plugin-transform-react-pure-annotations": "^7.16.7",
-    "@babel/preset-react": "^7.16.7",
-    "@rollup/plugin-node-resolve": "^13.1.2",
-    "@rollup/pluginutils": "^4.1.2",
-    "@storybook/addon-actions": "^6.4.9",
-    "@storybook/addon-essentials": "^6.4.9",
-    "@storybook/addon-links": "^6.4.9",
-    "@storybook/react": "^6.4.9",
-    "babel-loader": "^8.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rollup": "^2.62.0",
-    "rollup-plugin-babel": "^4.4.0",
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-react-display-name": "^7.23.3",
+    "@babel/plugin-transform-react-jsx-development": "^7.22.5",
+    "@babel/plugin-transform-react-pure-annotations": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@mdx-js/react": "^3.0.1",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/pluginutils": "^5.1.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "babel-loader": "^9.1.3",
+    "react": "^18.2.0",
+    "react-docgen-typescript-plugin": "^1.0.5",
+    "react-dom": "^18.2.0",
+    "rollup": "^4.12.0",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "storybook": "^7.6.17",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": ">= 17.0.2",
+    "react-dom": ">= 17.0.2"
   }
 }
